 * #10028: Account delete does not purge user's auth cookie
 * #10123: Registration with EmailVerification should instruct more clearly
 * #10204: Users can delete their email address even when verify_email=true
 * #10276: "Unknown preference panel" when logging out from account tab
 * #10397: Don't allow username with all capital letters
 * #10412: acct_mgr-0.4dev breaking 2.4 compatibility
 * #10625: AssertionError in trac.db.pool.PooledConnection.__del__
 * do AccountManager class API cleanup by moving db access to model layer
 * prevent duplicate action entries in Trac core permission select box

 new features
 * #874: Add new fields to register form and a registration validation system
 * #5295: Add optional username regexp to registration checks
 * #7577: Prevent spammers from registering
 * #8076: Add optional account email regexp to registration checks
 * #8791: Obsolete patch needed for authentication against Jira
   by adding sha256/sha512 hash support (needs `passlib` or extended `crypt`)
 * #9618: HttpAuthStore authentication enhancement
   by allowing a relative URL for `authentication_url` configuration option
 * #9676: Incorporate optional Single-Sign-On functionality
 * #9852: Embed some user information in TracWiki
   by introducing WikiMacros `ProjectStats` and `UserQuery`
 * #10142: Allow admin to override verification status
 * add recursion to option parser for configuration admin page and provide
   available valid values for an `ExtensionOption` like `IPasswordHashMethod`
   by a select field (dropdown box) - or meaningful message on missing options
 * add cleanup page for purging `session_attribute` db table via admin web UI
 * add randomized authentication cookie ID refreshment, average refresh rate
   controlled by new option `cookie_refresh_pct`
 * switch to case-less username duplicate checking
 * add unit tests i.e. for hash creation and re-written registration checks
   to significantly extend code coverage